fix: flag body overflowing text IE bug

--- a/src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.scss
+++ b/src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.scss
@@ -27,6 +27,7 @@ $bolt-flag-alignments: (
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: auto;
+  min-width: 0%;
 }
 
 
